--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.2",
+    "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.6",
