--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.2",
+    "@types/react-syntax-highlighter": "^10.1.0",
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-syntax-highlighter": "^10.2.1",
     "typescript": "3.4.2"
   },
   "scripts": {
